data/yamls/Ямлы/yams/svc-sender.yaml
# D-03.000.00-1192_client - номер сборки дистрибутива (пример: R1-109)
# ${distrib.release.version} - версия релиза (пример: RO1)

apiVersion: v1
kind: Service
metadata:
  labels:
    app: unimon-sender-${distrib.release.version}
    app-group: "unimon-sender"
    version: "D-03.000.00-1192_client"
    ts: "unimon"
  name: 'unimon-sender-${distrib.release.version}'
  annotations:
    prometheus.io.scrape: "true"
    prometheus.io.path: "/actuator/prometheus"
    prometheus.io.port: "8081"
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
    - name: "http-actuator"
      port: 8081
      targetPort: 8081
    - name: "http-for-write-metrics"
      port: 10098
      targetPort: 8080
  selector:
    deploymentconfig: 'unimon-sender-${distrib.release.version}'
  type: ClusterIP
